--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
+$primary: #fff;
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -10,5 +18,48 @@ html {
 }
 
 body {
+  max-width: 100vw;
   background: #364f6b;
+  display: flex;
+  justify-content: center;
+}
+
+header {
+  height: 30rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  color: $primary;
+  display: flex;
+  flex-direction: column;
+
+  & h1 {
+    font-size: 2.2rem;
+    font-weight: 800;
+  }
+
+  & h2 {
+    font-size: 1.7rem;
+    font-weight: 700;
+  }
+}
+
+.navbar {
+  & ul {
+    list-style: none;
+    display: flex;
+  }
+
+  & ul li {
+    margin-right: 1rem;
+  }
+
+  &__item {
+    font-size: 1.6rem;
+    text-decoration: none;
+    color: $primary;
+  }
 }
