--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,8 @@ ul {
 
 html {
   font-size: 62.5%;
-  font-family: "Montserrat", sans-serif;
+  font-family: brandon-grotesque,sans-serif;
+  text-rendering: optimizeLegibility;
 }
 
 body {
@@ -46,9 +47,11 @@ header {
     justify-content: space-between;
   }
 
-  & a {
+  /// a
+
+  & span a {
     display: inline-block;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     text-decoration: none;
     color: $primary-color;
 
@@ -229,12 +232,12 @@ footer p {
 
   header {
     max-width: 50vw;
+    margin-top: 1rem;
   }
 
   header {
     height: 10rem;
     justify-content: flex-end;
-    padding: 1rem;
   }
 
   .navbar {
@@ -250,7 +253,7 @@ footer p {
     }
 
     & a {
-      font-size: 1.6rem;
+      font-size: 1.7rem;
     }
   }
 
