--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,7 @@ ul {
 
 html {
   font-size: 62.5%;
-  font-family: brandon-grotesque,sans-serif;
+  font-family: brandon-grotesque, sans-serif;
   text-rendering: optimizeLegibility;
 }
 
@@ -47,9 +47,7 @@ header {
     justify-content: space-between;
   }
 
-  /// a
-
-  & span a {
+  & a {
     display: inline-block;
     font-size: 1.6rem;
     text-decoration: none;
@@ -223,6 +221,25 @@ footer p {
   }
 }
 
+.project {
+  
+  background-color: $primary-color;
+  &__title {
+  }
+
+  &__description {
+  }
+
+  &__skill {
+  }
+
+  &__link {
+  }
+}
+
+.secondary {
+}
+
 /* Media Queries */
 
 @media (min-width: 1080px) {
@@ -253,7 +270,7 @@ footer p {
     }
 
     & a {
-      font-size: 1.7rem;
+      font-size: 1.9rem;
     }
   }
 
@@ -268,7 +285,7 @@ footer p {
     }
 
     & p {
-      font-size: 2rem;
+      font-size: 2.2rem;
     }
   }
 
@@ -276,7 +293,7 @@ footer p {
 
   .terminal {
     &__window {
-      font-size: 1.7rem;
+      font-size: 1.9rem;
       width: 100%;
       margin: 8rem auto;
       box-shadow: 0 0.25rem 0.5rem #12181e;
