--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@ html {
   font-size: 62.5%;
   font-family: brandon-grotesque, sans-serif;
   text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -321,6 +322,7 @@ footer p {
 
 .link {
   color: $secondary-color;
+  text-decoration: none;
 
   &:hover {
     opacity: 0.8;
