--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -186,9 +186,10 @@ footer p {
 }
 
 .section__title {
-  text-align: center;
+  width: 100%;
   font-size: 2.4rem;
   margin-bottom: 6rem;
+  text-align: center;
 
   &:after {
     content: "";
@@ -279,7 +280,7 @@ footer p {
   &__skill {
     font-size: 1.3rem;
     border-radius: 0.4rem;
-    border: 2px solid #32c1457e;
+    border: 2px solid #258b33;
     padding: 0.5rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
@@ -297,7 +298,7 @@ footer p {
     border-radius: 0.4rem;
     letter-spacing: 0.025rem;
     text-decoration: none;
-    transition: all 0.15s ease;
+    transition: all 0.2s ease;
     font-size: 1.5rem;
     font-weight: 500;
     box-sizing: border-box;
@@ -455,7 +456,6 @@ footer p {
   .contact {
     & div {
       flex-direction: row;
-      justify-content: center;
       margin: 6rem auto;
     }
 
@@ -480,10 +480,12 @@ footer p {
 
     &__image-container {
       width: 40%;
+
       clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
     }
 
     &__image {
+      height: 100%;
       display: block;
     }
 
