--- a/src/components/design-tokens/variables.scss
+++ b/src/components/design-tokens/variables.scss
@@ -1,3 +1,22 @@
 $primary-color: #eeeeee;
 $secondary-color: #00adb5;
 $bg-color: #222831;
+
+/* Projects section */
+
+$p-bg-color: #232323;
+$skill-color: #258b33;
+/* $btn-bg-color: #; */
+$btn2-bg-color: #121212;
+$btn-hover-color: #00c2cc;
+$btn2-hover-color: #121212e6;
+$btn-text-color: #000;
+/* $btn-text-color: ; */
+
+/* Terminal section */
+
+$t-bar-color: #191919;
+$t-bg-color: #232323;
+$t-btn-color: #f55551;
+$t-btn2-color: #f6b73e;
+$t-btn3-color: #32c146;
