--- a/src/components/design-tokens/variables.scss
+++ b/src/components/design-tokens/variables.scss
@@ -1,11 +1,11 @@
-$primary-color: #eeeeee;
-$secondary-color: #00adb5;
-$bg-color: #222831;
+$primary-color: #525F7F;
+$secondary-color: #747fe0;
+$bg-color: #F6F9FC;
 
 /* Projects section */
 
-$p-bg-color: #232323;
-$skill-color: #258b33;
+$p-bg-color: #383838;
+$skill-color: #92eac0;
 /* $btn-bg-color: #; */
 $btn2-bg-color: #121212;
 $btn-hover-color: #00c2cc;
@@ -15,8 +15,12 @@ $btn-text-color: #000;
 
 /* Terminal section */
 
-$t-bar-color: #191919;
-$t-bg-color: #232323;
-$t-btn-color: #f55551;
-$t-btn2-color: #f6b73e;
-$t-btn3-color: #32c146;
+$t-bar-color: #e4e3e5;
+$t-bg-color: #5A5D7A;
+
+$t-prompt-color: #f7f7f7;
+$t-command-color: #e7d184;
+
+$t-btn-color: #f96256;
+$t-btn2-color: #fdbc3d;
+$t-btn3-color: #33c948;
